--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
 
-  <a href="{{ site.url }}">{{ site.description }} ❤ Since 2023</a>
+  <a href="{{ site.url }}">{{ site.description }}</a>
 
 </div>
