--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,17 @@ video {
     box-sizing: border-box;
 }
 
+img{
+    border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
+}
+.title{
+    border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;
+}
+
 .container {
     width: 760px;
     margin: 0 auto;
@@ -174,16 +185,7 @@ body {
 .nav {
     padding: 70px 0;
 }
-img{
-    border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
-}
-.title{
-    color:orange; border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;
-}
+
 .blog-name {
     float: left;
     font-size: 20px;
