--- a/css/main.css
+++ b/css/main.css
@@ -330,6 +330,8 @@ body {
 .post-content img:not(.emoji) {
     max-width: 100%;
     margin: 20px 0;
+    border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
 }
 
 .post-tag {
