--- a/css/main.css
+++ b/css/main.css
@@ -139,16 +139,8 @@ video {
     box-sizing: border-box;
 }
 
-img{
-    border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
-}
-.title{
-    border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;
-}
+
+
 
 .container {
     width: 760px;
@@ -327,13 +319,18 @@ body {
     background-color: rgba(0, 0, 0, 0.02);
 }
 
-.post-content img:not(.emoji) {
+ img:not(.emoji) {
     max-width: 100%;
     margin: 20px 0;
     border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
 }
-
+.post-content .title{
+    border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;
+}
 .post-tag {
     margin-top: 30px;
     border-left: solid rgba(0, 0, 0, 0.08) 2px;
